--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,21 @@ spring:
     properties:
       hibernate:
         auto_quote_keyword: true
+  mail:
+    username: rslan.mailer@gmail.com
+    password: wikvjpxsqelzbjop
+    host: smtp.gmail.com
+    port: 587
+    properties:
+      mail:
+        debug: true
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+          ssl:
+            protocols: TLSv1.2
+            trust: smtp.gmail.com
 
 key:
   access: 8yNLSHtdF0TL9ncU7u7grovQeXckLJERFqzrYgsc9ug=
