--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -17,7 +17,7 @@ spring:
     port: 587
     properties:
       mail:
-        debug: true
+        debug: false
         smtp:
           auth: true
           starttls:
